// Copyright 2020 Owkin Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package orchestrator;

option go_package = "github.com/owkin/orchestrator/lib/asset";

enum AssetKind {
  ASSET_UNKNOWN = 0;
  ASSET_NODE = 1;
  ASSET_OBJECTIVE = 2;
  ASSET_DATA_SAMPLE = 3;
  ASSET_DATA_MANAGER = 4;
  ASSET_ALGO = 5;
  ASSET_COMPUTE_TASK = 6;
  ASSET_COMPUTE_PLAN = 7;
  ASSET_MODEL = 8;
  ASSET_PERFORMANCE = 9;
}

enum SortOrder {
    ASCENDING = 0;
    DESCENDING = 1;
}

// Addressable references an asset on the network.
// It contains both its address (backend URL) and checksum.
message Addressable {
  string checksum = 1;
  string storage_address = 2;
}

// Permissions for an asset, each key is an action
message Permissions {
  Permission process = 1;
  Permission download = 2;
}

// Permission represents the permission for a single action
message Permission {
  bool public = 1;
  repeated string authorized_ids = 2;
}

// NewPermissions is used to create a new permission set.
// This will be transformed in a full Permissions structure on registration.
message NewPermissions {
  bool public = 1;
  repeated string authorized_ids = 2;
}